# fun-kortr-anim-dsl

./: .travis.yml  LICENSE  README.md  appveyor.yml  fun-kortr-anim-dsl.cabal
src/: Main.hs  Session1.hs  Session1_Template.hs  Session2.hs  Session2_Exercise.hs  Session2_Template.hs  Session3_Exercise.hs  Session3_Template.hs
