name:                fun-kortr-anim-dsl
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/githubuser/fun-kortr-anim-dsl#readme
license:             BSD3
license-file:        LICENSE
author:              Ruben Pieters
maintainer:          rubenpietersgithub@gmail.com
copyright:           2019 Ruben Pieters
category:            Web
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md

executable fun-kortr-anim-dsl
  hs-source-dirs:      src
  main-is:             Main.hs
  default-language:    Haskell2010
  other-modules:       Session1
                     , Session2
                     , Session1_Template
                     , Session2_Template
  build-depends:       base >= 4.7 && < 5
                     , containers
                     , random
                     , mtl
                     , gloss
                     , microlens
                     , microlens-th
                     , microlens-mtl

